welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: ';' expected but '.' found.
  if (Math.abs(10-a))==Math.abs(10-b) {
                           ^